<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:id="@+id/textView" />
        <Button
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:id="@+id/pick"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purpose"
            android:id="@+id/textView2"
            android:layout_gravity="center_vertical" />

        <RadioGroup
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/r_g"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/prevent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="prevent"/>
            <RadioButton
                android:id="@+id/demand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="demand"/>
        </RadioGroup>

    </LinearLayout>
</LinearLayout>