<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

        <TextView
            android:text="@string/last_time_injection_was_on"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtLastTime"
            android:textColor="@color/dark"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/lastTime"
            android:layout_gravity="center_vertical"
            android:textColor="@color/lighterRed"
            android:textSize="20dp"/>

        <TextView
            android:text="@string/recommended_date_for_next_injection_is"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/dark"
            android:id="@+id/txtNextTime"
            android:textSize="20dp"/>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextTime"
            android:layout_gravity="center_vertical"
            android:textColor="@color/lighterRed"
            android:textSize="20dp"/>
        <Button
            android:background="@drawable/ic_alarm_black_24dp"
            android:layout_marginLeft="20dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/set_alarm"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/ic_add_circle_black_24dp"
            android:layout_marginLeft="5dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/add_recordbtn"
            />
        <TextView
            android:text="@string/add_new_injection_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/dark"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:id="@+id/add_recordtxt"
            android:onClick="AddRecord"
            android:clickable="true"/>
    </LinearLayout>
    <ListView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/list" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/delete_record_by_long_clicking" />
    </RelativeLayout>
</LinearLayout>
